fix: Change gap and margin in slider

--- a/front/css/style.css
+++ b/front/css/style.css
@@ -679,9 +679,6 @@
   padding: 110px 0 123px 0;
   background: var(--txt_color_second, #fff);
 }
-.main__search-block {
-  margin: 0 145px 88px 145px;
-}
 .main__filter {
   display: flex;
   justify-content: space-between;
@@ -823,6 +820,7 @@
   padding: 70px 0 97px 0;
   margin: 0 145px;
   padding: 0px 0 97px 0;
+  gap: 70px 22px;
   margin: 0;
 }
 .search-block__not-found {
@@ -1098,4 +1096,4 @@ body {
 
 body .container {
   margin: 0 auto;
-}
+}/*# sourceMappingURL=style.css.map */
